Fix composer.json again

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         {
             "name": "Kristoffer Tonning",
             "email": "tonning@gmail.com",
-            "homepage": "https://kristoffertonning.com",
+            "homepage": "https://kristoffertonning.com"
         }
     ],
     "require": {
