--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
             "homepage": "https://kristoffertonning.com"
         }
     ],
-    "require": {
-        "php": "^5.6",
-        "laracasts/flash": "^3.0"
+    "minimum-stability": "stable",
+    "require": {},
+    "config": {
+        "sort-packages": true
     }
 }
