--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "php": "7.4",
+        "php": ">=5.6.4",
         "laracasts/flash": "^3.0"
     },
     "config": {
